# cglcraft

./: CMakeLists.txt  chunk.c  chunk.h  chunkmanager.c  chunkmanager.h  hashmap.c  hashmap.h  main.c  mutex.c  mutex.h
cgllib/: camera.c  camera.h  mesh.c  mesh.h  model.c  model.h  nuklear_sdl_gl3.h  platform.c  platform.h  shader.c  shader.h  texture.c  texture.h
shaders/: 2d.vert  fxaa.frag  fxaa.vert  lighting.vert  simple3d.vert  texlight.frag  texlight.vert  texture.frag  texture3d.vert
snoise/: snoise3.h
